# serializer version: 1
# name: test_pipe_agg[zeta_pipe_agg]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	x
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	sum
                function_args
                  pos_arg
                    ident	x
              as_alias
                ident	xx
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_agg_list_trailing_comma]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
      group_by
        grouping_items
          grouping_item
            ident	x
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_aliases]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
              as_alias
                ident	x
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
              as_alias
                ident	z
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_dot_star]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              ident	x
        pipe_selection_item_with_order
          pipe_selection_item
            select_dot_star
              ident	s
        pipe_selection_item_with_order
          pipe_selection_item
            select_dot_star
              function_call_expr
                function_name
                  ident	f
                function_args
                  pos_arg
                    ident	y
        pipe_selection_item_with_order
          pipe_selection_item
            select_dot_star
              parenthesized_expr
                add_expr
                  ident	a
                  ident	b
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_and_order_by]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              integer_literal	1
      group_by
        group_by_and_order_by
        grouping_items
          grouping_item
            ident	x
          grouping_item
            ident	y
            order_by_item_sort	DESC
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_and_order_by_aliased]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	x
    pipe_agg
      group_by
        group_by_and_order_by
        grouping_items
          grouping_item
            add_expr
              ident	x
              integer_literal	1
            as_alias
              ident	y
            order_by_item_sort	ASC
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_and_order_by_grouping_sets_kitchen_sink]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              integer_literal	1
      group_by
        group_by_and_order_by
        grouping_items
          grouping_item
            grouping_item_empty
          grouping_item
            rollup_list
              rollup_item
                ident	x
          grouping_item
            cube_list
              cube_item
                ident	x
          grouping_item
            grouping_set_list
              grouping_set
                ident	x
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	sum
                function_args
                  pos_arg
                    ident	z
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              add_expr
                integer_literal	1
                function_call_expr
                  function_name
                    ident	count
                  function_args
                    pos_arg
                      add_expr
                        ident	x
                        integer_literal	1
      group_by
        grouping_items
          grouping_item
            ident	x
          grouping_item
            add_expr
              ident	y
              integer_literal	2
          grouping_item
            integer_literal	3
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by_alias_explicit]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
              as_alias
                ident	x
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
              as_alias
                ident	z
      group_by
        grouping_items
          grouping_item
            ident	x
            as_alias
              ident	y
          grouping_item
            ident	z
          grouping_item
            integer_literal	1
            as_alias
              ident	one
          grouping_item
            add_expr
              ident	x
              ident	y
            as_alias
              ident	xy
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by_alias_implicit]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
              as_alias
                ident	x
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
              as_alias
                ident	z
      group_by
        grouping_items
          grouping_item
            ident	x
            as_alias
              ident	y
          grouping_item
            add_expr
              ident	x
              ident	y
            as_alias
              ident	xy
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by_empty]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	sum
                function_args
                  pos_arg
                    ident	y
      group_by
        grouping_items
          grouping_item
            grouping_item_empty
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	sum
                function_args
                  pos_arg
                    ident	y
      group_by
        grouping_items
          grouping_item
            ident	y
          grouping_item
            grouping_item_empty
          grouping_item
            ident	x
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by_order_by_implicit]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      group_by
        grouping_items
          grouping_item
            ident	x
          grouping_item
            add_expr
              ident	x
              integer_literal	1
            order_by_item_sort	ASC
          grouping_item
            function_call_expr
              function_name
                ident	f
            order_by_item_sort	DESC
          grouping_item
            ident	z
            order_by_item_sort	ASC
            order_by_item_nulls	FIRST
          grouping_item
            ident	zz
            order_by_item_sort	DESC
            order_by_item_nulls	LAST
          grouping_item
            ident	a
            order_by_item_nulls	FIRST
          grouping_item
            ident	aa
            order_by_item_nulls	LAST
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_group_by_trailing_comma]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      group_by
        grouping_items
          grouping_item
            ident	x
    pipe_agg
      group_by
        grouping_items
          grouping_item
            ident	x
          grouping_item
            ident	y
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_grouping_item_kitchen_sink]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
      group_by
        grouping_items
          grouping_item
            rollup_list
              rollup_item
                ident	x
              rollup_item
                ident	y
    pipe_agg
      group_by
        grouping_items
          grouping_item
            grouping_set_list
              grouping_set
                parenthesized_expr
                  ident	x
              grouping_set
                struct_literal
                  ident	y
                  ident	z
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              ident	xyz
      group_by
        grouping_items
          grouping_item
            grouping_set_list
              grouping_set
                cube_list
                  cube_item
                    ident	x
                  cube_item
                    ident	y
              grouping_set
                struct_literal
                  ident	z
                  ident	z
              grouping_set
                rollup_list
                  rollup_item
                    ident	a
                  rollup_item
                    ident	b
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_order_by]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
          order_by_item_sort	ASC
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	sum
                function_args
                  pos_arg
                    ident	x
              as_alias
                ident	alias
          order_by_item_sort	DESC
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	avg
                function_args
                  pos_arg
                    ident	y
              as_alias
                ident	alias
          order_by_item_sort	ASC
          order_by_item_nulls	FIRST
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	max
                  function_distinct
                function_args
                  pos_arg
                    ident	z
          order_by_item_sort	DESC
          order_by_item_nulls	LAST
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	nosuffix
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_order_by_everywhere]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	count
                function_args
                  star_arg
          order_by_item_sort	asc
      group_by
        grouping_items
          grouping_item
            ident	key
            order_by_item_sort	asc
  
  '''
# ---
# name: test_pipe_agg[zeta_pipe_agg_window_fail_analysis]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_agg
      pipe_selection_item_list_with_order
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              integer_literal	1
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              ident	x
        pipe_selection_item_with_order
          pipe_selection_item
            select_expr
              function_call_expr
                function_name
                  ident	sum
                function_args
                  pos_arg
                    ident	y
                window_expr
                  window_spec
  
  '''
# ---
# name: test_pipe_as[zeta_pipe_as]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_as
      ident	t
  
  '''
# ---
# name: test_pipe_as[zeta_pipe_as_chained]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_as
      ident	t1
    pipe_as
      ident	t2
  
  '''
# ---
# name: test_pipe_as[zeta_pipe_as_input_aliased]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	x
    pipe_as
      ident	t
  
  '''
# ---
# name: test_pipe_as[zeta_pipe_as_scope_oopsie]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_list
                  select_expr
                    integer_literal	1
                    as_alias
                      ident	a
              pipe_as
                ident	t
    pipe_select
      select_list
        select_expr
          path_expression
            ident	t
            ident	a
  
  '''
# ---
# name: test_pipe_as[zeta_pipe_as_typical_usage_join]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t1
    pipe_join
      from_item_table
        path_expression
          ident	t2
      on_or_using_clause
        using_clause
          ident	key
    pipe_as
      ident	t3
  
  '''
# ---
# name: test_pipe_call[zeta_pipe_call]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_call
      function_call_expr
        function_name
          ident	f
    pipe_call
      function_call_expr
        function_name
          path_expression
            ident	a
            ident	b
            ident	c
        function_args
          pos_arg
            integer_literal	1
          pos_arg
            path_expression
              ident	x
              ident	y
          pos_arg
            function_call_expr
              function_name
                ident	g
          named_arg
            ident	named
            integer_literal	5
  
  '''
# ---
# name: test_pipe_drop[zeta_pipe_drop]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	x
    pipe_drop
      drop_list
        drop_item
          ident	a
    pipe_drop
      drop_list
        drop_item
          ident	a
    pipe_drop
      drop_list
        drop_item
          ident	a
        drop_item
          ident	b
        drop_item
          ident	c
    pipe_drop
      drop_list
        drop_item
          ident	a
        drop_item
          ident	b
        drop_item
          ident	c
  
  '''
# ---
# name: test_pipe_from[zeta_pipe_from]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
  
  '''
# ---
# name: test_pipe_from[zeta_pipe_from_expression_subquery]
  '''
  query_expr
    select
      select_list
        select_expr
          subquery
            query_expr
              pipe_from
                from_clause
                  from_item_table
                    path_expression
                      ident	t
        select_expr
          exists_subquery_expr
            query_expr
              pipe_from
                from_clause
                  from_item_table
                    path_expression
                      ident	t1
        select_expr
          array_subquery_expr
            query_expr
              pipe_from
                from_clause
                  from_item_table
                    path_expression
                      ident	t2
      from_clause
        from_item_subquery
          subquery
            query_expr
              pipe_from
                from_clause
                  from_item_table
                    path_expression
                      ident	t
  
  '''
# ---
# name: test_pipe_from[zeta_pipe_from_subquery]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_subquery
          subquery
            query_expr
              select
                select_list
                  select_star
                from_clause
                  from_item_table
                    path_expression
                      ident	t
  
  '''
# ---
# name: test_pipe_from[zeta_pipe_from_unnest_aliased]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_unnest
          unnest_expr
            array_literal
              integer_literal	1
          as_alias
            ident	x
  
  '''
# ---
# name: test_pipe_join[zeta_pipe_join]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	x
    pipe_join
      from_item_table
        path_expression
          ident	t2
          ident	x
          ident	y
    pipe_join
      from_item_table
        path_expression
          ident	t3
      on_or_using_clause
        using_clause
          ident	x
    pipe_join
      join_criteria	left
      from_item_table
        path_expression
          ident	t4
      on_or_using_clause
        on_clause
          boolean_literal	true
    pipe_join
      join_criteria	inner
      from_item_subquery
        subquery
          query_expr
            select
              select_list
                select_expr
                  ident	zzz
              from_clause
                from_item_table
                  path_expression
                    ident	zzz
    pipe_join
      join_criteria	cross
      from_item_table
        path_expression
          ident	t6
  
  '''
# ---
# name: test_pipe_join[zeta_pipe_join_unnest]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	x
    pipe_join
      from_item_unnest
        unnest_expr
          ident	y
    pipe_join
      from_item_unnest
        unnest_expr
          path_expression
            ident	y
            ident	z
        as_alias
          ident	i
        from_unnest_offset_expr
          as_alias
            ident	o
  
  '''
# ---
# name: test_pipe_named_window[zeta_pipe_named_window]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	sum
            function_args
              pos_arg
                ident	x
            window_expr
              window_spec
                ident	w
        select_expr
          function_call_expr
            function_name
              ident	count
            function_args
              star_arg
            window_expr
              window_spec
                ident	w2
      window_clause
        window_item
          ident	w
          window_expr
            window_spec
        window_item
          ident	w2
          window_expr
            window_spec
              window_partition_by
                ident	a
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	max
              function_args
                pos_arg
                  ident	y
              window_expr
                window_spec
                  ident	w
                  window_partition_by
                    ident	x
      window_clause
        window_item
          ident	w
          window_expr
            window_spec
              window_order_by
                order_by_items
                  order_by_item
                    ident	b
              window_frame
                window_frame_kind	ROWS
                window_frame_start
                  window_frame_current_row
  
  '''
# ---
# name: test_pipe_named_window[zeta_pipe_named_window_extend_trailing_comma]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_extend
      pipe_selection_item_list
        pipe_selection_item
          select_expr
            function_call_expr
              function_name
                ident	sum
              function_args
                pos_arg
                  ident	x
              window_expr
                window_spec
                  ident	w
      window_clause
        window_item
          ident	w
          window_expr
            window_spec
  
  '''
# ---
# name: test_pipe_named_window[zeta_pipe_named_window_select_trailing_comma]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	sum
            function_args
              pos_arg
                ident	x
            window_expr
              window_spec
                ident	w
      window_clause
        window_item
          ident	w
          window_expr
            window_spec
  
  '''
# ---
# name: test_pipe_named_window[zeta_pipe_named_window_unused]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_select
      select_list
        select_expr
          function_call_expr
            function_name
              ident	sum
            function_args
              pos_arg
                ident	x
      window_clause
        window_item
          ident	w
          window_expr
            window_spec
  
  '''
# ---
# name: test_pipe_order_by[zeta_pipe_order_by]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_order_by
      order_by_items
        order_by_item
          ident	x
    pipe_order_by
      order_by_items
        order_by_item
          integer_literal	1
        order_by_item
          ident	x
        order_by_item
          ident	y
        order_by_item
          add_expr
            ident	x
            integer_literal	1
        order_by_item
          function_call_expr
            function_name
              ident	sum
            function_args
              pos_arg
                ident	x
        order_by_item
          function_call_expr
            function_name
              ident	x
            window_expr
              window_spec
    pipe_order_by
      order_by_items
        order_by_item
          ident	x
          order_by_item_sort	ASC
        order_by_item
          ident	y
          order_by_item_sort	DESC
    pipe_order_by
      order_by_items
        order_by_item
          ident	x
          order_by_item_nulls	FIRST
  
  '''
# ---
# name: test_pipe_order_by[zeta_pipe_order_by_trailing_comma]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
    pipe_order_by
      order_by_items
        order_by_item
          ident	x
    pipe_order_by
      order_by_items
        order_by_item
          ident	x
        order_by_item
          ident	y
  
  '''
# ---
# name: test_pipe_pivot[zeta_pipe_pivot_aliased_exprs_kitchen_sink]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_pivot
      pivot_clause
        pivot_item_list
          pivot_item_list
            pivot_item_list
              pivot_item
                function_call_expr
                  function_name
                    ident	SUM
                  function_args
                    pos_arg
                      ident	a
                as_alias
                  ident	sum_a
            pivot_item
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	aa
              as_alias
                ident	sum_aa
          pivot_item
            add_expr
              integer_literal	2
              function_call_expr
                function_name
                  ident	COUNT
                function_args
                  pos_arg
                    add_expr
                      ident	b
                      integer_literal	3
        path_expression
          ident	t
          ident	x
        pivot_value_list
          pivot_value_list
            pivot_value_list
              pivot_value_item
                ident	z
            pivot_value_item
              add_expr
                ident	x
                ident	y
              as_alias
                ident	xpy
          pivot_value_item
            integer_literal	1
            as_alias
              ident	one
      as_alias
        ident	p
  
  '''
# ---
# name: test_pipe_pivot[zeta_pipe_pivot_multi_implicit_alias]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_pivot
      pivot_clause
        pivot_item_list
          pivot_item_list
            pivot_item
              function_call_expr
                function_name
                  ident	SUM
                function_args
                  pos_arg
                    ident	a
          pivot_item
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	b
        path_expression
          ident	b
        pivot_value_list
          pivot_value_item
            integer_literal	0
      as_alias
        ident	pivot_table
  
  '''
# ---
# name: test_pipe_pivot[zeta_pipe_pivot_nonreserved_kw]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_pivot
      pivot_clause
        pivot_item_list
          pivot_item
            ident	a
        path_expression
          ident	b
        pivot_value_list
          pivot_value_item
            ident	c
      as_alias
        ident	PIVOT
  
  '''
# ---
# name: test_pipe_pivot[zeta_pipe_pivot_single]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	t
    pipe_pivot
      pivot_clause
        pivot_item_list
          pivot_item
            function_call_expr
              function_name
                ident	SUM
              function_args
                pos_arg
                  ident	a
        path_expression
          ident	b
        pivot_value_list
          pivot_value_list
            pivot_value_item
              integer_literal	0
          pivot_value_item
            integer_literal	1
  
  '''
# ---
